--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@
           </svg>
         </div>
         <div>
-          <h1 class="text-xl font-bold text-gray-900">SmileCare Dental</h1>
+          <h1 class="text-xl font-bold text-gray-900">Beyond Smile Dental Care</h1>
           <p class="text-sm text-gray-600">Your Smile, Our Priority</p>
         </div>
       </div>
