--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -190,7 +190,7 @@
           href="tel:+15559111234" 
           class="bg-white text-red-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition-colors"
         >
-          Call Emergency Line: (555) 911-CARE
+          Call Emergency Line: +919549213923
         </a>
         <a 
           href="#book-appointment" 
