--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -55,7 +55,7 @@
             <div>
               <h3 class="font-semibold text-gray-900 mb-1">Email</h3>
               <p class="text-gray-600">Send us a message anytime</p>
-              <a href="mailto:info@beyondsmiledentalcare.com" class="text-green-600 hover:text-green-700 font-medium">
+              <a href="mailto:beyondsmiledentalcare@gmail.com " class="text-green-600 hover:text-green-700 font-medium">
                 beyondsmiledentalcare@gmail.com
               </a>
             </div>
